...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Today',
          tabBarIcon: ({ color, focused }) => (
            <TabBarIcon name="footsteps" color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
          ),
        }}
      />
      <Tabs.Screen
        name="map"
        options={{
          title: 'Map',
          headerTitle: 'Your Routes',
          tabBarIcon: ({ color, focused }) => (
            <TabBarIcon
              name="map"
              color={color}
              focused={focused}
...
